z-index issue for single-collection ui

--- a/LADS/css/NewCatalog.styl
+++ b/LADS/css/NewCatalog.styl
@@ -234,6 +234,7 @@
 	height 45%
 	position absolute
 	width 25%
+	z-index 2
 
 #newCatalogRoot #leftbar-header
 	height 5%
