--- a/LADS/css/TAG.css
+++ b/LADS/css/TAG.css
@@ -934,6 +934,7 @@
   height: 45%;
   position: absolute;
   width: 25%;
+  z-index: 2;
 }
 #newCatalogRoot #leftbar-header {
   height: 5%;
